--- a/DingTalkFucker/Package/DEBIAN/control
+++ b/DingTalkFucker/Package/DEBIAN/control
@@ -1,14 +1,14 @@
 Package: io.iosleep.DingTalkFucker
 Name: DingTalkFucker
-Version: 0.1-1
-Description: 
+Version: 1.0.0
+Description: 签到打卡（wifi，gps），抢红包（延迟，正则匹配）
 Section: System
 Depends: firmware (>= 5.0), mobilesubstrate
 Conflicts: 
 Replaces: 
 Priority: optional
 Architecture: iphoneos-arm
-Author: 马旭
+Author: iOSleep
 dev: 
 Homepage: 
 Depiction: 
