--- a/DingTalkFucker/Package/DEBIAN/control
+++ b/DingTalkFucker/Package/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: io.iosleep.DingTalkFucker
 Name: DingTalkFucker
-Version: 1.0.0
+Version: 1.0
 Description: 签到打卡（wifi，gps），抢红包（延迟，正则匹配）
 Section: System
 Depends: firmware (>= 5.0), mobilesubstrate
@@ -10,8 +10,8 @@ Priority: optional
 Architecture: iphoneos-arm
 Author: iOSleep
 dev: 
-Homepage: 
+Homepage: https://github.com/iOSleep/DingTalkFucker
 Depiction: 
-Maintainer: 
+Maintainer: mx.yolande@gmail.com
 Icon: 
 
